--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ backports.zoneinfo==0.2.1
 Django==4.2
 django-adaptors==0.2.5
 Pillow==9.5.0
+python-dateutil==2.8.2
 pytz==2023.3
+six==1.16.0
 sqlparse==0.4.4
