--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,39 @@
+amqp==5.1.1
 asgiref==3.6.0
+async-timeout==4.0.2
 backports.zoneinfo==0.2.1
+billiard==4.1.0
+celery==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==4.2
 django-adaptors==0.2.5
 django-appconf==1.0.5
 django-cookie-consent==0.3.1
 freetype-py==2.3.0
 idna==3.4
+kombu==5.3.1
+numpy==1.24.3
+opencv-python==4.7.0.72
 Pillow==9.5.0
+prompt-toolkit==3.0.38
 pycairo==1.23.0
+pypng==0.20220715.0
 python-dateutil==2.8.2
 pytz==2023.3
+qrcode==7.4.2
+redis==4.5.5
 reportlab==4.0.0
 requests==2.30.0
 rlPyCairo==0.2.0
 six==1.16.0
 sqlparse==0.4.4
-urllib3==2.0.2
-numpy==1.24.3
-opencv-python==4.7.0.72
-pypng==0.20220715.0
-pytz==2023.3
-qrcode==7.4.2
 typing_extensions==4.6.3
-
+tzdata==2023.3
+urllib3==2.0.2
+vine==5.0.0
+wcwidth==0.2.6
