--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python: Django",
             "type": "python",
@@ -11,6 +12,17 @@
             "program": "${workspaceFolder}/manage.py",
             "args": [
                 "runserver"
+            ],
+            "django": true,
+            "justMyCode": true
+        },
+        {
+            "name": "Python: runlauncher",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/tickets/launcher_reportlab.py",
+            "args": [
+                ""
             ],
             "django": true,
             "justMyCode": true
