--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 amqp==5.1.1
+appdirs==1.4.4
+argcomplete==3.1.1
 asgiref==3.6.0
 async-timeout==4.0.2
 backports.zoneinfo==0.2.1
@@ -19,12 +21,18 @@ idna==3.4
 kombu==5.3.1
 numpy==1.24.3
 opencv-python==4.7.0.72
+pdf2image==1.16.3
 Pillow==9.5.0
 prompt-toolkit==3.0.38
 pycairo==1.23.0
 pypng==0.20220715.0
+pyserial==3.5
+python-barcode==0.15.1
 python-dateutil==2.8.2
+python-escpos==2.2.0
 pytz==2023.3
+pyusb==1.2.1
+PyYAML==6.0
 qrcode==7.4.2
 redis==4.5.5
 reportlab==4.0.0
