--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ et-xmlfile==1.1.0
 freetype-py==2.3.0
 idna==3.4
 kombu==5.3.1
+mysqlclient==2.2.0
 numpy==1.24.3
 opencv-python==4.7.0.72
 openpyxl==3.1.2
@@ -42,6 +43,7 @@ requests==2.30.0
 rlPyCairo==0.2.0
 six==1.16.0
 sqlparse==0.4.4
+treepoem==3.23.0
 typing_extensions==4.6.3
 tzdata==2023.3
 urllib3==2.0.2
