--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,12 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
 printer_buffer.bin
+
+
+ltcboxoffice/static/images/
+
+hall_jsons/
+
+.gitignore
+
+
